# kaede

./: .gitignore  README.md  app.vue  bun.lockb  eslint.config.js  eslint.config.mjs  flake.nix  index.html  kaede-extra.json  nuxt.config.ts  package.json  temporary  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  unocss.config.ts  vite-pages.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: build.yml  build_nightly.yml  check.yml  compile-txiki.yml  eslint.yml  preview.yml
.sonarlint/: connectedMode.json
docs/: CONTRIBUTING.md  CREDITS.md  DOCS.md  EXTENSIONS.md  MULTIMC.md  PLAN.md  README.md  README.ru.md
src/: App.vue  README.md  app.vue  declarations.ts  globals.css  main.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: core-app.json  core-event.json  core-image.json  core-menu.json  core-path.json  core-resources.json  core-tray.json  core-webview.json  core-window.json  default.json  plugin-clipboard-manager.json  plugin-dialog.json  plugin-drpc.json  plugin-fs.json  plugin-global-shortcut.json  plugin-http.json  plugin-log.json  plugin-notification.json  plugin-opener.json  plugin-os.json  plugin-process.json  plugin-shell.json  plugin-shellx.json  plugin-upload.json
src-tauri/icons/: icon.icns
src-tauri/src/: launcher.rs  lib.rs  system.rs  zip.rs
src/__mocks__/: README.md  log.cjs
src/__mocks__/api/: window.cjs
src/components/: DownloadVersion.vue  ExampleImage.vue  Fetch.vue  README.md  Shit.vue  Temporary.vue
src/components/add-instance/: AddInstance.vue
src/components/base/: CustomButton.vue  CustomInput.vue  Image.vue
src/components/extensions/: ExtensionLoader.vue
src/components/handlers/: ErrorBoundary.vue
src/components/home/: Home.vue
src/components/layout/: ContextMenu.vue  Layout.vue  PageWrapper.vue  Router.vue  Sidebar.vue  Titlebar.vue
src/components/logging/: LogControls.vue  LogEntry.vue  LogHighlighter.vue  LogViewer.vue  NonVirtualizedLogs.vue
src/components/misc/: MaterialRipple.vue  NonBundledClasses.vue
src/components/profile/: Profile.vue
src/components/settings/: Settings.vue
src/components/statuses/: ExtensionsError.vue  GlobalError.vue
src/constants/: app.ts  application.ts  ascii-art.ts  browser.ts  configs.ts  english.json  event-listeners.ts  file-structure.ts  hooks.ts  launcher.ts  mappings.ts  meta.ts  pages.ts  permissions.ts  routes.ts  schemas.ts  url.ts
src/constants/ui/: pages.ts
src/extendable/: global-internals.ts  global-object.ts
src/layouts/: default.vue  root.vue
src/lib/: README.md
src/lib/browser/: README.md  index.ts
src/lib/configs/: index.ts
src/lib/development-mode-helpers/: index.ts
src/lib/errors/: index.ts
src/lib/extensions-manager/: index.ts
src/lib/general/: index.ts
src/lib/global-state-helpers/: index.ts
src/lib/globals/: index.ts
src/lib/handlers/: log.ts
src/lib/helpers/: change-global-state.ts  checksum.ts  extract-error.test.ts  extract-error.ts  get-relative-date.test.ts  getArch.ts  getConfig.ts  getPlatform.ts  global-state-helpers.ts  handle-error-capture.ts  initializeConfigFile.ts  initializeDirectories.ts  initializeInstancesFiles.ts  makeConfigsDirectory.ts  makeHomeDirectory.ts  parse-rules.ts  transform-platform.ts  unzip-file.ts  validate-file-size.ts
src/lib/instances/: index.ts
src/lib/launcher/: README.md  index.ts
src/lib/logging/: index.ts
src/lib/main/: declare-window.ts  get-config-file.test.ts  get-config-file.ts  get-config-global-states.ts  get-default-config.test.ts  get-default-config.ts  get-default-global-states.ts  initialize-config-file.ts  initialize-launcher.ts  prepare-log-file.ts
src/lib/minecraft/: parseVersions.ts
src/lib/network/: downloadLibraries.ts  (+1 more)
src/middleware/: disable-vue-transitions.global.ts
src/pages/: About.vue  AddInstance.vue  Home.vue  Library.vue  README.md  Settings.vue  about.vue  index.vue
src/states/: global.ts  instance.ts  plugin-playground.ts  servers.ts
src/types/: Config.type.ts  FunctionResponses.type.ts  README.md
types/: README.md  kaede-lib.d.ts
vetur/: attributes.json  tags.json
(+396 files in other folders)
