[package]
name = "kaede"
version = "0.0.0"
description = "An extensible Tauri-based Minecraft launcher written in Vue and Rust"
authors = ["windstone", "kaeeraa"]
license = "GPL-3.0"
repository = "https://github.com/FreesmTeam/kaede"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = ["macos-private-api"] }
tauri-plugin-log = "2"

# Non-default installed plugins
tauri-plugin-fs = "2"
chrono = "0.4.41"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-upload = "2"
tauri-plugin-drpc = "0.1.4"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
