[package]
name = "kaede"
version = "0.0.0"
description = "An extensible Tauri-based Minecraft launcher written in Vue and Rust"
authors = ["windstone", "kaeeraa"]
license = "GPL-3.0"
repository = "https://github.com/kaede-basement/kaede"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = ["protocol-asset", "macos-private-api", "image-ico", "image-png", "tray-icon"] }
tauri-plugin-log = "2"

chrono = "0.4.41"
sha1 = "0.10.6"
sysinfo = "0.36.1"
rayon = "1.11.0"
zip = "3.0"
zip-extensions = "0.8.3"
tokio = { version = "1", features = ["full"] }

# Non-default installed plugins
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-upload = "2"
tauri-plugin-opener = "2"
tauri-plugin-oauth = "2"
tauri-plugin-clipboard-manager = "2"

# Modded shell plugin that allows any commands (...recipe for disaster?)
tauri-plugin-shellx = "2.0.16"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
